# elementary_tutorial

./: elementary_tutor.vala
vala_gtk/: application.vala  application_window.vala  main.vala  meson.build  resources.c
